# SlashTax

./: .gitignore  README.md  setup.bat  start.bat
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: clusters.py  diagnostics.py  graph.py  instagram.py  persons.py  posts.py
backend/app/core/: config.py  database.py
backend/app/schemas/: models.py
backend/app/services/: ai_service.py  clustering_service.py  face_recognition_service.py  graph_service.py  instagram_service.py  media_store.py
backend/scripts/: smoke_test_import.py
docker/: Dockerfile.backend  docker-compose.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GraphVisualization.tsx  ImageUpload.tsx  NodeDetails.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  store.ts  utils.ts
frontend/src/types/: index.ts
